small code update

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,7 +10,7 @@ h1 {
   text-align: center;
 }
 
-.courseValue {
+.course-ticket {
   display: flex;
   flex-direction: column;
   align-items: center;
